fix of some features.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@tiptap/extension-color": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.9",
     "@tiptap/extension-text-style": "^3.0.7",
     "@tiptap/pm": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
