change dialogs and fix bugs

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "/manifest.webmanifest",
+        "destination": "/manifest.webmanifest"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
