--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "export-code": "node export-code.js",
-    "db:seed": "node seed-db.js"
+    "db:seed": "node seed-db.js",
+    "db:migrate": "node migration.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
